test/types/errors/test/other.ts
import add from '..';

add(true, true);
